Implement rest endpoints

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   NewCops: enable
 
 Layout/LineLength:
-  Max: 100
+  Max: 120
 
 Style/Documentation:
   Enabled: false
@@ -11,4 +11,10 @@ Layout/EmptyLineAfterGuardClause:
   Enabled: false
 
 Style/MultilineBlockChain:
+  Enabled: false
+
+Style/DoubleNegation:
+  Enabled: false
+
+Metrics:
   Enabled: false
