--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,3 +13,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker-compose build
+
+    - shell: bash
+      run: docker save word-cards_app:latest | gzip > word-cards_app.tar.gz
+
+    - name: Upload the Docker image
+      uses: actions/upload-artifact@v2
+      with:
+        name: image
+        path: word-cards_app.tar.gz
