--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     - run: npm install
     - run: npm test
 
-  lint:
+  eslint:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
@@ -32,3 +32,13 @@ jobs:
         node-version: '16'
     - run: npm install
     - run: npm run lint
+
+  rubocop:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1.0'
+    - run: bundle install
+    - run: bundle exec rubocop
