--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/test-utils": "^2.0.0-rc.21",
-    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "@vue/vue3-jest": "^27.0.0",
     "eslint": "^8.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.7.1",
     "flush-promises": "^1.0.2",
-    "sass": "^1.50.1",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-svg-loader": "^0.17.0-beta.2"
