--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.22.2",
+    "core-js": "^3.22.5",
     "lodash": "^4.17.21",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.14",
+    "vue": "^3.2.35",
+    "vue-router": "^4.0.15",
     "vue-window-size": "^1.1.2"
   },
   "devDependencies": {
@@ -22,16 +22,16 @@
     "@vue/cli-plugin-router": "~5.0.4",
     "@vue/cli-plugin-unit-jest": "~5.0.4",
     "@vue/cli-service": "~5.0.4",
-    "@vue/compiler-sfc": "^3.2.33",
+    "@vue/compiler-sfc": "^3.2.35",
     "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0",
-    "eslint": "^8.14.0",
+    "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^9.0.1",
     "flush-promises": "^1.0.2",
-    "sass": "^1.51.0",
-    "sass-loader": "^12.6.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-svg-loader": "^0.17.0-beta.2"
   }
