--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit",
+    "test": "TZ=UTC vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
